# EmoryHacks

./: .gitignore  CONTRIBUTING.md  MICRONUTRIENT_FIX_SUMMARY.md  OVI_SUMMARY.md  Pregnancy_Complete_Guide.md  QUICK_START.md  README.md  SETUP.md  app.json  package-lock.json  package.json  start-backend.sh  start-frontend.sh
.github/workflows/: ci.yml
.kiro/specs/: database-schema.md
aurea-frontend/: App.tsx  CHANGELOG.md  DASHBOARD_NUTRITION_UPDATE_FIX.md  EMPTY_STATES_IMPLEMENTATION.md  ENHANCED_UI_IMPLEMENTATION.md  README.md  SCREEN_TRANSITIONS_IMPLEMENTATION.md  SERVING_SIZE_REDESIGN.md  SKELETON_LOADING_IMPLEMENTATION.md  app.json  package.json  tsconfig.json
aurea-frontend/android/: settings.gradle
aurea-frontend/app/: theme.ts
backend/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG_AUTO.md  CLEANUP_LOG.txt  Dockerfile  MICRONUTRIENT_FIX_INSTRUCTIONS.md  Makefile  README.md  alembic.ini  delete_todays_logs.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  restart_server.sh  task.txt
backend/app/: main.py
backend/app/api/: auth.py  health.py  journal.py  users.py
backend/app/api/food/: __init__.py  chatbot.py  logging.py  lookup.py  nutrition.py  photo_analysis.py  safety.py  search.py  utils.py
backend/app/api/food/search/: __init__.py  cache_manager.py  database.py  external_apis.py  result_builder.py
backend/app/core/: config.py  database.py  logging.py  security.py  supabase_jwt.py
backend/app/data/: pregnancy_safety_rules.json  weekly_nutrition_targets.py
backend/app/middleware/: idempotency.py  logging.py  metrics.py  security.py
backend/app/models/: __init__.py  chat.py  food.py  ingredient.py  journal.py  safety_report.py  user.py
backend/app/schemas/: __init__.py  base.py  food.py  journal.py  user.py
backend/app/services/: ai_client.py  allergen_service.py  cache_service.py  food_chatbot_service.py  food_classifier.py  gemini_vision_service.py  nutrition_calculator_service.py  object_storage.py  open_food_facts_service.py  pregnancy_safety_service.py  rate_limiter.py  smart_suggestions_service.py  spoonacular_service.py  unified_food_service.py  usda_safety_service.py  usda_service.py  user_provisioning.py  wellness_chatbot_service.py
backend/app/utils/: food_factory.py
backend/app/workers/: photo_worker.py
backend/migrations/: env.py
backend/migrations/versions/: 103f665c298c_add_chat_logs_and_user_verification.py  204a778d309e_add_missing_food_log_columns.py  3b5c889d410f_rename_nutrients_to_micronutrients.py  4c6d990e521f_add_ingredients_and_allergens_to_foods.py  520c43721114_initial_schema.py  9b2c1a7f6d10_add_supabase_user_id_and_nullable_password.py  a1b2c3d4e5f6_fk_cascades.py  b2c3d4e5f6a7_food_cache_expires.py  c3d4e5f6a7b8_indexes_softdelete.py  cabdeabb1fe1_initial_migration.py  create_foods_table_direct.py  create_journal_entries_table.py  d4e5f6a7b8c9_food_off_id_and_source.py  d65a598b5759_add_birth_date.py  e5f6a7b8c9d0_safety_reports_table.py  e622866fe771_update_user_model_to_use_datetime_for_.py  f3a1d9e8b2c5_add_onboarding_completed.py  f6a7b8c9d0e1_food_safety_verdict.py  optimize_foods_table_schema.py
backend/scripts/: migrate_food_schema.py  seed_db.py
backend/tests/: conftest.py  test_auth.py  test_food.py  test_health.py  test_journal.py  test_nutrition_logic.py  test_users.py
backend/tests/test_api/: test_auth.py  test_auth_supabase.py  test_food.py  test_food_logging_routes.py
backend/tests/test_services/: test_cache_service.py  test_food_classifier.py  test_food_factory.py  test_pregnancy_safety.py  test_rate_limiter.py
docs/: FOOD_SYSTEM.md  SUPABASE_AUTH.md
ovi-frontend/: .env.example  .gitignore  ANIMATIONS_IMPLEMENTATION.md  App.tsx  CACHE_INVALIDATION.md  HEADER_IMPLEMENTATION.md  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
ovi-frontend/__tests__/: App.test.tsx
ovi-frontend/app/: theme.ts
ovi-frontend/docs/: ACCESSIBILITY.md  CAMERA_BUTTON_IMPLEMENTATION.md  NAVIGATION_TRANSITIONS.md  (+1 more)
ovi-landing/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
(+275 files in other folders)
