[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ovi-backend"
version = "0.1.0"
description = "Backend for Ovi Pregnancy Nutrition & Wellness Companion App"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ovi Team" }]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "migrations*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", "venv", ".venv", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "C4",             # comprehensions
    "SIM",            # simplify
    "ASYNC",          # async-bugs
    "RUF",            # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI Depends() default args
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F401", "F811"]
"app/api/**" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["migrations/", "venv/", "scripts/", "tests/"]

[[tool.mypy.overrides]]
module = ["app.services.*", "app.core.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = ["app.api.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "integration: integration tests requiring docker services",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "*/migrations/*", "tests/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
